syntax = "proto2";

import "google/protobuf/descriptor.proto";
import "google/protobuf/field_mask.proto";

package key;

// option go_package = "github.com/nova38/Thesis/tools/protoc-gen-state/key/v1;keyv1";

//enum TransactionType{
//    TRANSACTION_TYPE_UNSPECIFIED = 0;
//    TRANSACTION_TYPE_INVOKE = 1;
//    TRANSACTION_TYPE_QUERY = 2;
//}
//
//extend google.protobuf.ServiceOptions {
//    optional TransactionType type  = 50006;
//}


message KeySchema {
    required string namespace = 1;
    required google.protobuf.FieldMask key_paths = 2;
}

message DataField {
    required bool is_data = 1;
    optional google.protobuf.FieldMask updated_log = 2;
}


extend google.protobuf.FieldOptions {
    optional DataField data_field = 54599;
    
}


extend google.protobuf.MessageOptions {
    optional KeySchema key_schema = 54599;
    // optional string namespace = 54600;

    optional bool is_key = 54601;
}
 





